deploy/platform/routing/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: asterism
spec:
  hostnames:
    - asterism.apps.os.fowler.house
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: asterism
      namespace: istio-ingress
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: asterism-auth-proxy
          port: 80
